--- a/input.yaml
+++ b/input.yaml
@@ -1,70 +1,136 @@
 chain-type: ETH
 api_methods:
-- eth_blockNumber
-- eth_sendRawTransaction
-- eth_getBalance
-- eth_getStorageAt
-- eth_getTransactionCount
-- eth_getCode
-- eth_call
-- eth_estimateGas
-- eth_getBlockTransactionCountByHash
-- eth_getBlockTransactionCountByNumber
-- eth_getUncleCountByBlockHash
-- eth_getUncleCountByBlockNumber
-- eth_getBlockByHash
-- eth_getBlockByNumber
-- eth_getTransactionByHash
-- eth_getTransactionByBlockHashAndIndex
-- eth_getTransactionByBlockNumberAndIndex
-- eth_getTransactionReceipt
-- eth_getUncleByBlockHashAndIndex
-- eth_getUncleByBlockNumberAndIndex
-- web3_clientVersion
-- web3_sha3
-- net_version
-- net_listening
-- net_peerCount
-- eth_protocolVersion
-- eth_syncing
-- eth_coinbase
-- eth_mining
-- eth_hashrate
-- eth_gasPrice
-- eth_accounts
-- eth_blockNumber
-- eth_getBalance
-- eth_getStorageAt
-- eth_getTransactionCount
-- eth_getBlockTransactionCountByHash
-- eth_getBlockTransactionCountByNumber
-- eth_getUncleCountByBlockHash
-- eth_getUncleCountByBlockNumber
-- eth_getCode
-- eth_sign
-- eth_signTransaction
-- eth_sendTransaction
-- eth_sendRawTransaction
-- eth_call
-- eth_estimateGas
-- eth_getBlockByHash
-- eth_getBlockByNumber
-- eth_getTransactionByHash
-- eth_getTransactionByBlockHashAndIndex
-- eth_getTransactionByBlockNumberAndIndex
-- eth_getTransactionReceipt
-- eth_getUncleByBlockHashAndIndex
-- eth_getUncleByBlockNumberAndIndex
-- eth_getCompilers
-- eth_newFilter
-- eth_newBlockFilter
-- eth_newPendingTransactionFilter
-- eth_uninstallFilter
-- eth_getFilterChanges
-- eth_getFilterLogs
-- eth_getLogs
-- eth_getWork
-- eth_submitWork
-- eth_submitHashrate
-- eth_unsubscribe
-- rpc_modules
+- name: eth_blockNumber
+  args: 0
+- name: eth_sendRawTransaction
+  args: 0
+- name: eth_getBalance
+  args: 0
+- name: eth_getStorageAt
+  args: 0
+- name: eth_getTransactionCount
+  args: 0
+- name: eth_getCode
+  args: 0
+- name: eth_call
+  args: 0
+- name: eth_estimateGas
+  args: 0
+- name: eth_getBlockTransactionCountByHash
+- name: eth_getBlockTransactionCountByNumber
+- name: eth_getUncleCountByBlockHash
+  args: 0
+- name: eth_getUncleCountByBlockNumber
+  args: 0
+- name: eth_getBlockByHash
+  args: 0
+- name: eth_getBlockByNumber
+  args: 0
+- name: eth_getTransactionByHash
+  args: 0
+- name: eth_getTransactionByBlockHashAndIndex
+  args: 0
+- name: eth_getTransactionByBlockNumberAndIndex
+  args: 0
+- name: eth_getTransactionReceipt
+  args: 0
+- name: eth_getUncleByBlockHashAndIndex
+  args: 0
+- name: eth_getUncleByBlockNumberAndIndex
+  args: 0
+- name: web3_clientVersion
+  args: 0
+- name: web3_sha3
+  args: 0
+- name: net_version
+  args: 0
+- name: net_listening
+  args: 0
+- name: net_peerCount
+  args: 0
+- name: eth_protocolVersion
+  args: 0
+- name: eth_syncing
+  args: 0
+- name: eth_coinbase
+  args: 0
+- name: eth_mining
+  args: 0
+- name: eth_hashrate
+  args: 0
+- name: eth_gasPrice
+  args: 0
+- name: eth_accounts
+  args: 0
+- name: eth_blockNumber
+  args: 0
+- name: eth_getBalance
+  args: 0
+- name: eth_getStorageAt
+  args: 0
+- name: eth_getTransactionCount
+  args: 0
+- name: eth_getBlockTransactionCountByHash
+  args: 0
+- name: eth_getBlockTransactionCountByNumber
+  args: 0
+- name: eth_getUncleCountByBlockHash
+  args: 0
+- name: eth_getUncleCountByBlockNumber
+  args: 0
+- name: eth_getCode
+  args: 0
+- name: eth_sign
+  args: 0
+- name: eth_signTransaction
+  args: 0
+- name: eth_sendTransaction
+  args: 0
+- name: eth_sendRawTransaction
+  args: 0
+- name: eth_call
+  args: 0
+- name: eth_estimateGas
+  args: 0
+- name: eth_getBlockByHash
+  args: 0
+- name: eth_getBlockByNumber
+  args: 0
+- name: eth_getTransactionByHash
+  args: 0
+- name: eth_getTransactionByBlockHashAndIndex
+  args: 0
+- name: eth_getTransactionByBlockNumberAndIndex
+  args: 0
+- name: eth_getTransactionReceipt
+  args: 0
+- name: eth_getUncleByBlockHashAndIndex
+  args: 0
+- name: eth_getUncleByBlockNumberAndIndex
+  args: 0
+- name: eth_getCompilers
+  args: 0
+- name: eth_newFilter
+  args: 0
+- name: eth_newBlockFilter
+  args: 0
+- name: eth_newPendingTransactionFilter
+  args: 0
+- name: eth_uninstallFilter
+  args: 0
+- name: eth_getFilterChanges
+  args: 0
+- name: eth_getFilterLogs
+  args: 0
+- name: eth_getLogs
+  args: 0
+- name: eth_getWork
+  args: 0
+- name: eth_submitWork
+  args: 0
+- name: eth_submitHashrate
+  args: 0
+- name: eth_unsubscribe
+  args: 0
+- name: rpc_modules
+  args: 0
