--- a/magma-rust/Cargo.toml
+++ b/magma-rust/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 # cli
 clap = {version = "4.2", features = ["derive"]}
-
+colored    = "2.0"
 
 # logging
 log = "0.4"
