--- a/magma-rust/Cargo.toml
+++ b/magma-rust/Cargo.toml
@@ -16,6 +16,11 @@ env_logger = "0.10.0"
 color-eyre = "0.6.2"
 eyre = "0.6.8"
 thiserror = "1.0.40"
+
+# serde
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
+
+# utils
+derive_more = "0.99.17"
